Fix font name to Verdana

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,6 +1,6 @@
 .odd-element {
     background-color: #ffc0cb;
-    font-family: Dejana, "Dejavu Sans", sans-serif;
+    font-family: Verdana, "Dejavu Sans", sans-serif;
 }
 
 #second-element {
