--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -12,7 +12,7 @@
     font-size: 24px;
 }
 
-#fourth-element.medium-size-font {
+#fourth-element {
     background-color: #008000;
     font-weight: bold;
 
