Change to grouping classes solution
In original commit I submited a solution in which i had a common class for common styles.
However, I am supposed to use class grouping selector to solve this, not a common class.
In this commit I fixed this.

--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,4 +1,5 @@
-.font-class {
+.clickme-class,
+.noclickme-class {
     font-size: 28px;
     font-family: Helvetica, "Times New Roman", sans-serif;
 }
